syntax = "proto3";
option go_package = "github.com/nimbolism/software-restaurant/back-end/order-service/proto";

// Import the necessary packages
import "google/protobuf/timestamp.proto";

// Define the message types
message Order {
  uint64 id = 1;
  uint64 user_id = 2;
  repeated OrderFood foods = 3;
  repeated OrderSideDish side_dishes = 4;
  bool paid = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message OrderFood {
  int64 id = 1;
  string name = 2;
  string description = 3;
}

message OrderSideDish {
  int64 id = 1;
  string name = 2;
  string description = 3;
}

// Define the service
service OrderService {
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc GetAllOrdersByUsername (GetAllOrdersByUsernameRequest) returns (GetAllOrdersResponse);
  rpc GetAllOrdersBetweenTimestamps (GetAllOrdersBetweenTimestampsRequest) returns (GetAllOrdersResponse);
}

// Define request and response messages for each RPC
message GetAllOrdersRequest {}

message GetAllOrdersByUsernameRequest {
  string username = 1;
}

message GetAllOrdersBetweenTimestampsRequest {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
}